Lab 04: Clarified wording. Added OS to use for new VM. Fixed description of functionality of the DeployAzureDSC.ps1. Updated procedure to add virtual disk to match UI. Updated procedure to configure backend pool to match UI. Fixed numbering.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /Allfiles/Labfiles/Lab03/Starter/ResDev/ResDevLinuxDeploy/.vs/ResDevLinuxDeploy/v14/.suo
+/Allfiles/Logs/Setup-Azure-3.log
+/Allfiles/Logs/Setup-Azure-4.log
